# chess-engine-bitboard

./: CMakeLists.txt
src/: board.cpp  constants.cpp  display.cpp  main.cpp
src/board/: board_utils.h
src/move/: bishop.cpp  king.cpp  knight.cpp  move.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  sliders.cpp
src/types/: types.h
